# gulfwatch

./: .env.example  .gitignore  Cargo.toml  README.md
crates/: README.md
crates/gulfwatch-classification/: Cargo.toml
crates/gulfwatch-classification/src/: lib.rs
crates/gulfwatch-classification/src/program_ids/: mod.rs
crates/gulfwatch-core/: Cargo.toml
crates/gulfwatch-core/src/: alert.rs  balance_diff.rs  cu_attribution.rs  idl.rs  idl_decode.rs  lib.rs  metrics.rs  pipeline.rs  rolling_window.rs  transaction.rs  tx_error.rs
crates/gulfwatch-core/src/detections/: authority_change.rs  correlation.rs  failed_tx_cluster.rs  large_transfer.rs  mod.rs  token2022.rs
crates/gulfwatch-ingest/: Cargo.toml
crates/gulfwatch-ingest/src/: client.rs  discover.rs  idl_registry.rs  lib.rs  parser.rs  rpc.rs
crates/gulfwatch-ingest/src/program_ids/: mod.rs
crates/gulfwatch-mcp/: Cargo.toml  README.md
crates/gulfwatch-mcp/src/: main.rs
crates/gulfwatch-server/: Cargo.toml
crates/gulfwatch-server/src/: lib.rs  main.rs  routes.rs  ws.rs
crates/gulfwatch-tui/: Cargo.toml
crates/gulfwatch-tui/src/: app.rs  config.rs  init_wizard.rs  main.rs  ui.rs
docs/: README.md  architecture.md  classification.md  cu-attribution.md  detections.md  idl-loading.md  transaction-classification.md
web/: README.md  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: fade-in-up.tsx  glyph.tsx  install-command.tsx  live-terminal.tsx
