[package]
name = "gulfwatch-core"
version = "0.1.0"
edition = "2024"

[dependencies]
 chrono = { version = "0.4", features = ["serde"] }
native-tls = "0.2.18"
  serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.44"
