[package]
name = "gulfwatch-core"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core types, detections, and alert engine for GulfWatch."
repository = "https://github.com/meowyx/gulfwatch"
readme = "../../README.md"

[dependencies]
bs58 = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
gulfwatch-classification = { version = "0.1.0", path = "../gulfwatch-classification" }
native-tls = "0.2.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10"
tokio = { version = "1.51.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.44"
