[package]
name = "gulfwatch-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rmcp = { version = "1.4.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread", "io-std"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
urlencoding = "2.1.3"
