[package]
name = "gulfwatch-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json", "ws"] }
futures-util = "0.3.32"
gulfwatch-core = { version = "0.1.0", path = "../gulfwatch-core" }
gulfwatch-ingest = { version = "0.1.0", path = "../gulfwatch-ingest" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter"] }

[dev-dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
