[package]
name = "gulfwatch-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
crossterm = "0.29.0"
gulfwatch-core = { version = "0.1.0", path = "../gulfwatch-core" }
gulfwatch-ingest = { version = "0.1.0", path = "../gulfwatch-ingest" }
gulfwatch-server = { version = "0.1.0", path = "../gulfwatch-server" }
ratatui = "0.30.0"
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
